[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/hud/music/Game Over.ogg" type="AudioStream" id=1]
[ext_resource path="res://assets/hud/fonts/standar_style.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/hud/fonts/standar_button.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/hud/fonts/title_fonts.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=5]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="ScoreContiner" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScoreContiner"]
margin_right = 136.0
margin_bottom = 19.0

[node name="socre" type="Label" parent="ScoreContiner/HBoxContainer"]
margin_right = 78.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 4 )
text = "score: "

[node name="point" type="Label" parent="ScoreContiner/HBoxContainer"]
margin_left = 82.0
margin_right = 93.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="GO" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -21.0
margin_bottom = 21.0

[node name="Title" type="Label" parent="GO"]
margin_right = 144.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "GAME OVER"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GO"]
margin_top = 17.0
margin_right = 144.0
margin_bottom = 30.0
alignment = 1

[node name="Restar" type="Button" parent="GO/HBoxContainer"]
margin_left = 14.0
margin_right = 81.0
margin_bottom = 13.0
custom_colors/font_color_hover = Color( 1, 0.878431, 0.509804, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Restar"
flat = true

[node name="exit" type="Button" parent="GO/HBoxContainer"]
margin_left = 85.0
margin_right = 130.0
margin_bottom = 13.0
custom_colors/font_color_hover = Color( 0.952941, 0.0196078, 0.0196078, 1 )
custom_fonts/font = ExtResource( 3 )
text = "exit"
flat = true

[connection signal="pressed" from="GO/HBoxContainer/Restar" to="." method="_on_Restar_pressed"]
[connection signal="pressed" from="GO/HBoxContainer/exit" to="." method="_on_exit_pressed"]
